# obsidian_pdf_multi_export

./: README.md  aider.sh  pyproject.toml
docs/: tasks.md
src/obsidian_pdf_multi_export/: cli.py  main.py
src/obsidian_pdf_multi_export/config/: __init__.py  ini_config_manager.py
src/obsidian_pdf_multi_export/sync/: __init__.py  synchronizer.py
