[project]
name = "obsidian-pdf-multi-export"
version = "0.1.0"
description = "A tool to export Obsidian vaults to PDF, preserving structure and handling attachments."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
]

[project.urls]
Homepage = "https://github.com/KoStard/obsidian_pdf_multi_export"
Repository = "https://github.com/KoStard/obsidian_pdf_multi_export"
Issues = "https://github.com/KoStard/obsidian_pdf_multi_export/issues"

[project.scripts]
obsidian-pdf-multi-export = "obsidian_pdf_multi_export.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.5",
]

[tool.ruff]
line-length = 120
select = ["E", "W", "F", "I", "C", "B"] # Enable basic flake8 codes + import sorting + bugbear
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src/obsidian_pdf_multi_export --cov-report=term-missing"
testpaths = [
    "tests",
]
